# Conquest3DViewport

./: .gitignore  IMPORTANT  Important.md  LICENSE  README.md  READ_THIS_OR_NOTHING_WORKS.md
AugmentScripts/: fix_spawn_node_transforms.py
DLL/CrashPreventer/: ReadMe.txt
DLL/DebugAndAudio/: ConquestMods_AudioEvents.txt  ReadMe.txt
GameFiles/animations/: BKG_BL_BlackGateEast_open.json
GameFiles/effects/: CHFX_Bal_FireSword_Loop.json  CHFX_Bal_FireSword_Loop_world.json
GameFiles/lotrcparser/: ReadMe.txt
GameFiles/lotrcparser/CoreScripts/: get_obj_index.py  model_swap.py
GameFiles/lotrcparser/CoreScripts/lotrc_blender/: loader.py
GameFiles/lotrcparser/CoreScripts/lotrc_blender/exp/: conv.py  model.py
GameFiles/lotrcparser/CoreScripts/lotrc_blender/imp/: model.py  textures.py
GameFiles/lotrcparser/Unluac/: unluac_batch.bat
GameFiles/models/: 0x4C4285CB.glb  ali_boxes.glb
GameFiles/srclua/Helm'sDeep/: ai_npc_biped_archer.lua
GameFiles/textures/: AnimatedCrowd4.dds  AnimatedCrowd4.json
Scene3D/: Scene3DEditor.ini  Scene3DEditorState.ini
Scene3D/othertools/: ReadMe.txt  test_level.json
dev/Vespucci/Project/Final/lotr/ZeroEnginePrototype/ZeroEngine/CoreScripts/: bulletproof_gamemode_converter.py  level_gltf.py
dev/Vespucci/Project/Final/lotr/ZeroEnginePrototype/ZeroEngine/CoreScripts/lotrc-rust/: .gitignore  Cargo.toml  LICENSE  README.md  build.bat  build.sh  build_win.sh
dev/Vespucci/Project/Final/lotr/ZeroEnginePrototype/ZeroEngine/CoreScripts/lotrc-rust/lotrc/: Cargo.toml
dev/Vespucci/Project/Final/lotr/ZeroEnginePrototype/ZeroEngine/CoreScripts/lotrc-rust/lotrc/res/: animation_events.json  conquest_strings.txt
dev/Vespucci/Project/Final/lotr/ZeroEnginePrototype/ZeroEngine/CoreScripts/lotrc-rust/lotrc/src/: audio.rs  bin.rs  level.rs  level_alt.rs  level_info.rs  lib.rs  lua_stuff.rs  read_write.rs  shader.rs  types.rs
dev/Vespucci/Project/Final/lotr/ZeroEnginePrototype/ZeroEngine/CoreScripts/lotrc-rust/lotrc/src/pak/: animation.rs  mod.rs
dev/Vespucci/Project/Final/lotr/ZeroEnginePrototype/ZeroEngine/CoreScripts/lotrc-rust/lotrc/src/pak_alt/: mod.rs  model.rs  shape.rs
dev/Vespucci/Project/Final/lotr/ZeroEnginePrototype/ZeroEngine/CoreScripts/lotrc_blender/: __init__.py  blender_manifest.toml  ui.py
dev/Vespucci/Project/Final/lotr/ZeroEnginePrototype/ZeroEngine/Engine/DLL/: build_both.bat
dev/Vespucci/Project/Final/lotr/ZeroEnginePrototype/ZeroEngine/Engine/DLL/ConquestConsole-main/ConquestConsole-main/: CMakeLists.txt
dev/Vespucci/Project/Final/lotr/ZeroEnginePrototype/ZeroEngine/Engine/DLL/ConquestConsole-main/ConquestConsole-main/src/: audiohook.cpp  customaudio.cpp  customaudio.h  dllmain.cpp  event_mapping.h  wwisesdk.cpp  wwisesdk.h
dev/Vespucci/Project/Final/lotr/ZeroEnginePrototype/ZeroEngine/Engine/DLL/Vanilla/D3D9Proxy-main/D3D9Proxy/: CMakeLists.txt
dev/Vespucci/Project/Final/lotr/ZeroEnginePrototype/ZeroEngine/Engine/DLL/Vanilla/D3D9Proxy-main/D3D9Proxy/src/: d3d9device.cpp  d3d9device.h  d3d9proxy.cpp  d3d9proxy.def
dev/Vespucci/Project/Final/lotr/ZeroEnginePrototype/ZeroEngine/Engine/audio/: AUDIO_STATUS.md  AudioManager.cpp  AudioManager.h  BankLoadProgress.cpp  BankLoadProgress.h  EventMapping.h  EventMappingData.cpp  gen_mapping.ps1
dev/Vespucci/Project/Final/lotr/ZeroEnginePrototype/ZeroEngine/GameFiles/: READ THIS.txt
dev/Vespucci/Project/Final/lotr/ZeroEnginePrototype/ZeroEngine/GameFiles/animations/: READ THIS.txt  rh6_crd01_A.json  rh6_crd01_B.json  rh6_crd03_A.json  rh6_crd03_B.json  rh6_crd04_A.json  rh6_crd04_B.json
dev/Vespucci/Project/Final/lotr/ZeroEnginePrototype/ZeroEngine/GameFiles/effects/: FX_FireSword_Loop.json  FX_SHR_Env_Ash.json  FX_SHR_Env_Birds.json  FX_SHR_env_ember.json  FX_SHR_env_ember_fire.json  READ THIS.txt
dev/Vespucci/Project/Final/lotr/ZeroEnginePrototype/ZeroEngine/Scene3D/: AnimationCurve.h  AnimationCurveTest.h  AnimationCurveUI.h  AnimationGraphRuntimeTypes.h  AnimationSystem.cpp  AnimationSystem.h  AssetBrowser.cpp  AssetBrowser.h  BezierCurveEditor.h  BezierEasingTest.cpp  EntityFieldDefs.cpp  EntityFieldDefs.h  GameModelLoader.cpp  GameModelLoader.h  HavokCompat.cpp  HavokToDisplayConverter.cpp  HavokToDisplayConverter.h  InverseKinematics.h  LevelInspector.cpp  LevelInspector.h  LevelReader.cpp  LevelReader.h  LevelScene.cpp  LevelScene.h  LuaAnimationGraphParser.cpp  LuaAnimationGraphParser.h  LuaAnimationRuntime.cpp  LuaAnimationRuntime.h  MgPackedParticleShaders.cpp  MgPackedParticleShaders.h  MocapBridge.cpp  MocapBridge.h  MocapExporter.cpp  MocapExporter.h  MocapRetargeter.cpp  MocapRetargeter.h  PakAnimLoader.cpp  PakAnimLoader.h  PakRebuilder.cpp  PakRebuilder.h  (+40 more)
dev/Vespucci/Project/Final/lotr/ZeroEnginePrototype/ZeroEngine/tools/: analyze_anim_sound_events.py  build_audio_manifest.py  dump_d3d9_shader.ps1  verify_bank_mapping.py
(+364 files in other folders)
